--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,109 @@
+Release 0.21.10:
+---------------------
+Al Poole (1):
+      Efm: file properties, fix widget sizing issue.
+
+Carsten Haitzler (5):
+      wireless module - dont segv e if connman daemon restarts
+      e - fix eet image format test to actually use key when loading
+      filepreview - properly set min size on cells not in a broken way
+      xsettings - fix warning for buffer that could be a bit small
+      batget - fix warnings about buffer sizes
+
+Derek Foreman (1):
+      Remove ecore_drm support
+
+Marcel Hollerbach (6):
+      e_startup: check for efreet errors
+      tiling: show notification if a client cannot be tiled
+      everything: use correct edje api
+      mixer: find a better name
+      tiling: give a better error message if a client doesnt fit
+      everything:declare this object as const
+
+Mike Blumenkrantz (79):
+      reject gadget site layout attempts only when it would be impossible
+      do not reposition new bryces after using editor
+      clamp vertical bryce size to useful zone geometry
+      use explicit rounding for bryce scaling
+      do not add delete/kill request smart callbacks for non-internal wl clients
+      apply client hints when rescaling a client
+      rescale x11 clients after fetching hints
+      don't arbitrarily bind version=1 for wl extension resources
+      make mouse-activated menus function as expected with 0 passed as activate time
+      do not defer wl gl init
+      clamp internal win min/max size hints to 0
+      set clock gadget id on creation
+      destroy gadget configs when deleting a gadget site
+      avoid object hide animations during shutdown
+      handle case where eglBindWaylandDisplay fails during wl init
+      capture zone for newly-added bryces based on name
+      make menu autoplacement more consistent by preferring DOWN placement
+      set gadget ctxpopup priority based on anchor
+      end xdnd operations on window hide if no FINISHED event is received
+      don't force xwl drag client motion for override drag clients
+      use xwindow check to determine whether to check icccm accept/take focus attrs
+      always align ibar inner box to the left
+      send theme signal for dialogs when no buttons are present
+      only pop a single dialog to notify about all fail themes in theme dialog
+      block updating window remembers while applying them
+      use EC_CHANGED for client menu attr changes
+      avoid hiding->showing->hiding->etc submenus for active menu items
+      re-select previously selected font+size in font class config
+      clamp xsettings font size to 12 when size is 0
+      only update wl client window size on commit if no pending resize exists
+      handle focus reverting correctly when using desk flip all actions
+      replace existing resize pointer mode for x11 client-initiated resizes
+      lock menu eventing during menu idler positioning
+      use menu item geometry to determine whether menu item is onscreen
+      only set new clients to current desk if desk has not yet been set
+      temporarily cache x11 configure requests which reposition hidden windows
+      remove invalid framelist call on frametable object in imc dialog
+      check imc exe existence before showing in imc dialog list
+      don't set gadman overlay gadgets as editing if overlay not visible
+      batch x11 maximize state change requests
+      force min size calc on dialog show
+      always use client geometry for comp object centering functions
+      handle gadget ctxpopup placement for desktop gadgets
+      set moving gadgets in pointer site to have moving state
+      perform gadget site layout before calling drop callback
+      destroy dropped gadgets after drop operation completes
+      fix color class dialog sizing
+      use client geometry for fileman popup positioning instead of win object geometry
+      use evas size hints for image widget internals if internal obj is not edje obj
+      use client frame for internal win geometry setting on show
+      perform client zone updates on canvas move/resize when not ignored
+      do not rescale override x11 clients during hint fetching
+      use clone of remembers list in window remember config
+      handle xdg "autostart" directories in apps dialogs
+      handle bryce setup when theme is broken
+      track setxkbmap processes and allow only one to run at a time
+      Revert "force recalc on bryce scroller when doing recalc on gadget site"
+      Revert "handle updates_full when adding comp object update regions"
+      force client render on mirror show for clients which have not yet been rendered
+      initialize stack variables
+      use int array for client maximize hint state update
+      use focus_set_with_pointer to focus from clients menu (middle click)
+      track gadget ctxpopups and reposition within zone on resize
+      do not reset existing client damage on resize if tiler size matches pixmap size
+      move pending client render queue in pixel callback to before render call
+      return during client pixel callback if pixmap is dirty and no updates exist
+      avoid adding render updates on client resize while shading the client
+      check for matching '/' in screen edid before fuzzy matching in randr init
+      use correct string for randr screen fuzzy matching
+      set shaped client image alpha after setting image data
+      don't update clock timer for time gadgets when deleting a non-advanced gadget
+      stack gadgets below site event rect when reparenting gadget
+      add time config event rects to gadget popups list
+      reset zone edge objects after comp canvas update
+      block all desk flips during window resize
+      warp pointer to center of internal dialog on show if dialog has focus
+      apply pointer focus to existing config dialogs from settings window
+      handle first time desk setting for fullscreen clients without crashing
+      remove fullscreen clients from vdesk clients list when toggling sticky state
+
+Release 0.21.9:
+---------------------
 Amitesh Singh (1):
       e widget entry: fix the compilation warning
 
