--- a/po/sl.po
+++ b/po/sl.po
@@ -1,7 +1,7 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR Enlightenment development team
+# Copyright (C) 2000-2017 Enlightenment development team
 # This file is distributed under the same license as the enlightenment package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2000-2017.
 #
 msgid ""
 msgstr ""
